--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -90,16 +90,12 @@
         PropertyName="FodyExecutedWeavers" />
     </Fody.WeavingTask>
 
-    <PropertyGroup>
-      <FodyWeavingTargetWasRun>true</FodyWeavingTargetWasRun>
-    </PropertyGroup>
-
   </Target>
 
   <UsingTask
     TaskName="Fody.VerifyTask"
     AssemblyFile="$(FodyAssembly)" />
-  <Target Condition="'$(NCrunch)' != '1' And $(FodyWeavingTargetWasRun) == true And $(DisableFody) != true"
+  <Target Condition="'$(NCrunch)' != '1' And $(FodyExecutedWeavers) != '' And $(DisableFody) != true"
       AfterTargets="AfterBuild"
       Name="FodyVerifyTarget"
       DependsOnTargets="$(FodyVerifyDependsOnTargets)">
