--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -83,6 +83,7 @@
           DebugType="$(DebugType)"
           DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
           MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
+          WeaverProbingPaths="$(WeaverProbingPaths)"
       >
 
       <Output
