--- a/FodyPackaging/FodyPackaging.csproj
+++ b/FodyPackaging/FodyPackaging.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Content Include="build\*" PackagePath="build" />
     <Content Include="buildMultiTargeting\*" PackagePath="buildMultiTargeting" />
+    <Content Include="Weaver.Props.Template" PackagePath="" />
   </ItemGroup>
 
 </Project>
