--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -61,13 +61,10 @@
       AfterTargets="AfterCompile"
       Condition="Exists('@(IntermediateAssembly)') And $(DesignTimeBuild) != true And $(DisableFody) != true"
       Name="FodyTarget"
-      DependsOnTargets="$(FodyDependsOnTargets);RunResolvePackageDependencies"
+      DependsOnTargets="$(FodyDependsOnTargets)"
       Inputs="@(IntermediateAssembly->'%(FullPath)');$(FodyKeyFilePath);$(ProjectWeaverXml)"
       Outputs="$(TargetPath)">
 
-    <ItemGroup>
-      <FodyPackageDefinitions Include="%(PackageDefinitions.ResolvedPath)"/>
-    </ItemGroup>
     <Fody.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
           IntermediateDir="$(ProjectDir)$(IntermediateOutputPath)"
@@ -79,10 +76,10 @@
           SignAssembly="$(FodySignAssembly)"
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
           DefineConstants="$(DefineConstants)"
-          PackageDefinitions="@(FodyPackageDefinitions)"
           DebugType="$(DebugType)"
           DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
           MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
+          WeaverProbingPaths="$(WeaverProbingPaths)"
       >
 
       <Output
