--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -1,22 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Choose>
-    <When Condition="$(NCrunchOriginalSolutionDir) != '' And $(NCrunchOriginalSolutionDir) != '*Undefined*'">
-      <PropertyGroup>
-        <FodySolutionDir>$(NCrunchOriginalSolutionDir)</FodySolutionDir>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(SolutionDir) != '' And $(SolutionDir) != '*Undefined*'">
-      <PropertyGroup>
-        <FodySolutionDir>$(SolutionDir)</FodySolutionDir>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">
-      <PropertyGroup>
-        <FodySolutionDir>$(MSBuildProjectDirectory)\..\</FodySolutionDir>
-      </PropertyGroup>
-    </When>
-  </Choose>
   <PropertyGroup>
     <ProjectWeaverXml>$(ProjectDir)FodyWeavers.xml</ProjectWeaverXml>
     <FodySignAssembly Condition="$(FodySignAssembly) == '' Or $(FodySignAssembly) == '*Undefined*'">$(SignAssembly)</FodySignAssembly>
@@ -50,12 +33,12 @@
 
     <Fody.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
-          IntermediateDir="$(ProjectDir)$(IntermediateOutputPath)"
+          IntermediateDirectory="$(ProjectDir)$(IntermediateOutputPath)"
           KeyOriginatorFile="$(KeyOriginatorFile)"
           AssemblyOriginatorKeyFile="$(AssemblyOriginatorKeyFile)"
           NuGetPackageRoot="$(NuGetPackageRoot)"
           ProjectDirectory="$(MSBuildProjectDirectory)"
-          SolutionDir="$(FodySolutionDir)"
+          SolutionDirectory="$(SolutionDir)"
           References="@(ReferencePath)"
           SignAssembly="$(FodySignAssembly)"
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
@@ -64,6 +47,7 @@
           DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
           MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
           WeaverProbingPaths="$(WeaverProbingPaths)"
+          NCrunchOriginalSolutionDirectory="$(NCrunchOriginalSolutionDir)"
       >
 
       <Output
@@ -84,8 +68,9 @@
     <Fody.VerifyTask
           ProjectDirectory="$(MSBuildProjectDirectory)"
           TargetPath="$(TargetPath)"
-          SolutionDir="$(FodySolutionDir)"
+          SolutionDirectory="$(SolutionDir)"
           DefineConstants="$(DefineConstants)"
+          NCrunchOriginalSolutionDirectory="$(NCrunchOriginalSolutionDir)"
       />
   </Target>
 
