move to WeaverFiles

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -45,7 +45,7 @@
           DebugType="$(DebugType)"
           DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
           MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
-          WeaverProbingPaths="$(WeaverProbingPaths)"
+          WeaverFiles="$(WeaverFiles)"
           NCrunchOriginalSolutionDirectory="$(NCrunchOriginalSolutionDir)"
       >
 
