--- a/Integration/nuget.config
+++ b/Integration/nuget.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+	<remove key="globalPackagesFolder" />
+	<add key="globalPackagesFolder" value="../packages" />
+  </config>
   <packageSources>
   	<clear />
     <add key="Local Integration Source" value="../nugets" />
+	<add key="Test Integration Source" value="../SampleWeaver/bin" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
