--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -2,8 +2,14 @@
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
     <PackageReference Include="Virtuosity.Fody" Version="1.21.1" />
   </ItemGroup>
+
+  <Target Name="VerifyThereAreNoWeaversInOutput" AfterTargets="AfterBuild">
+    <Error Condition="Exists('$(OutDir)Virtuosity.dll')"
+           Text="Virtuosity.dll found in build output" />
+  </Target>
 </Project>
