Fix #582: ReferenceCopyLocalPaths are preserved during incremental build.

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -54,7 +54,7 @@
 
     </Fody.WeavingTask>
 
-    <ItemGroup>
+    <ItemGroup Condition="'$(FodyExecutedWeavers)'!=''">
       <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" />
       <ReferenceCopyLocalPaths Include="@(FodyUpdatedReferenceCopyLocalPaths)" />
     </ItemGroup>
