--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -32,7 +32,10 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl> 
+    <DebugType>embedded</DebugType>	
+    <Deterministic>true</Deterministic>	
+    <DeterministicSourcePaths>true</DeterministicSourcePaths>
   </PropertyGroup>
   
   <!-- Global settings to run integration tests inline while building -->
