--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -6,6 +6,7 @@
     <FodyAssemblyDirectory Condition="'$(MSBuildRuntimeType)' == 'Core'">$(FodyPath)netstandardtask</FodyAssemblyDirectory>
     <FodyAssemblyDirectory Condition="'$(MSBuildRuntimeType)' != 'Core'">$(FodyPath)netclassictask</FodyAssemblyDirectory>
     <FodyAssembly Condition="'$(FodyAssembly)' == ''">$(FodyAssemblyDirectory)\Fody.dll</FodyAssembly>
+    <FodyCopyLocalFilesCache Condition="'$(FodyCopyLocalFilesCache)' == ''">$(MSBuildProjectFile).Fody.CopyLocal.cache</FodyCopyLocalFilesCache>
   </PropertyGroup>
 
   <!-- Support for NCrunch -->
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <UsingTask TaskName="Fody.WeavingTask" AssemblyFile="$(FodyAssembly)" />
+  <UsingTask TaskName="Fody.UpdateReferenceCopyLocalTask" AssemblyFile="$(FodyAssembly)" />
   <UsingTask TaskName="Fody.VerifyTask" AssemblyFile="$(FodyAssembly)" />
 
   <Target
@@ -42,17 +44,32 @@
         MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
         WeaverFiles="@(WeaverFiles)"
         NCrunchOriginalSolutionDirectory="$(NCrunchOriginalSolutionDir)"
+        IntermediateCopyLocalFilesCache="$(IntermediateOutputPath)$(FodyCopyLocalFilesCache)"
       >
 
       <Output
         TaskParameter="ExecutedWeavers"
         PropertyName="FodyExecutedWeavers" />
 
+    </Fody.WeavingTask>
+
+  </Target>
+
+  <Target
+      Name="FodyUpdateCopyLocalFilesTarget"
+      AfterTargets="FodyTarget"
+    >
+
+    <Fody.UpdateReferenceCopyLocalTask
+        ReferenceCopyLocalFiles="@(ReferenceCopyLocalPaths)"
+        IntermediateCopyLocalFilesCache="$(IntermediateOutputPath)$(FodyCopyLocalFilesCache)"
+      >
+
       <Output
         TaskParameter="UpdatedReferenceCopyLocalFiles"
         ItemName="FodyUpdatedReferenceCopyLocalPaths" />
 
-    </Fody.WeavingTask>
+    </Fody.UpdateReferenceCopyLocalTask>
 
     <ItemGroup>
       <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" />
