--- a/SampleWeaver/SampleWeaver.csproj
+++ b/SampleWeaver/SampleWeaver.csproj
@@ -8,7 +8,7 @@
   <Import Project="..\FodyPackaging\build\FodyPackaging.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;net40</TargetFrameworks>
   </PropertyGroup>
 
   <Import Project="..\FodyPackaging\build\FodyPackaging.targets" />
