--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,8 @@ version: 1.0.{build}
 image: Visual Studio 2017
 build_script:
 - cmd: |
-    dotnet build Fody.sln --configuration Release
-    msbuild Integration\Integration.sln /target:Restore
-    msbuild Integration\Integration.sln /p:Configuration=Release /verbosity:minimal
+    msbuild -restore Fody.sln /p:Configuration=Release /verbosity:minimal
+    msbuild -restore Integration\Integration.sln /p:Configuration=Release /verbosity:minimal
     msbuild Integration\Tests\Tests.csproj /target:Restore
 test:
   assemblies:
