Hide FodyWeavers.xsd from project items

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -15,6 +15,12 @@
     <None Include="@(WeaverFiles)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="$(MSBuildProjectDirectory)\FodyWeavers.xsd">
+      <Visible>false</Visible>
+    </None>
+  </ItemGroup>
+
   <UsingTask TaskName="Fody.WeavingTask" AssemblyFile="$(FodyAssembly)" />
   <UsingTask TaskName="Fody.UpdateReferenceCopyLocalTask" AssemblyFile="$(FodyAssembly)" />
   <UsingTask TaskName="Fody.VerifyTask" AssemblyFile="$(FodyAssembly)" />
