--- a/SampleTarget/SampleTargetTests.csproj
+++ b/SampleTarget/SampleTargetTests.csproj
@@ -9,8 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -18,7 +21,7 @@
     <ProjectReference Include="..\SampleWeaver.Fody\SampleWeaver.Fody.csproj" Condition="'$(TargetFramework)'=='dummy'" />
     <ProjectReference Include="..\SampleWeaver\SampleWeaver.csproj" />
   </ItemGroup>
-  
+
   <Import Project="$(SolutionDir)Fody\Fody.Targets" Condition="'$(IsInlineIntegrationTestActive)'=='true' AND Exists('$(SolutionDir)Fody\Fody.Targets')" />
 
   <ItemGroup>
