--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,11 +9,15 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="ApprovalTests" Version="3.0.18" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="ObjectApproval" Version="2.3.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <ProjectReference Include="..\DummyAssembly\DummyAssembly.csproj" />
