--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -7,18 +7,13 @@
     <FodyAssemblyDirectory Condition="'$(MSBuildRuntimeType)' != 'Core'">$(FodyPath)netclassictask</FodyAssemblyDirectory>
     <FodyAssembly Condition="'$(FodyAssembly)' == ''">$(FodyAssemblyDirectory)\Fody.dll</FodyAssembly>
     <FodyCopyLocalFilesCache Condition="'$(FodyCopyLocalFilesCache)' == ''">$(MSBuildProjectFile).Fody.CopyLocal.cache</FodyCopyLocalFilesCache>
+    <DefaultItemExcludes>$(DefaultItemExcludes);FodyWeavers.xsd</DefaultItemExcludes>
   </PropertyGroup>
 
   <!-- Support for NCrunch -->
   <ItemGroup Condition="'$(NCrunch)' == '1'">
     <None Include="$(FodyAssemblyDirectory)\*.*" />
     <None Include="@(WeaverFiles)" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="$(MSBuildProjectDirectory)\FodyWeavers.xsd">
-      <Visible>false</Visible>
-    </None>
   </ItemGroup>
 
   <UsingTask TaskName="Fody.WeavingTask" AssemblyFile="$(FodyAssembly)" />
