--- a/Integration/nuget.config
+++ b/Integration/nuget.config
@@ -7,7 +7,7 @@
   <packageSources>
   	<clear />
     <add key="Local Integration Source" value="../nugets" />
-	<add key="Test Integration Source" value="../SampleWeaver/bin" />
+	<add key="Test Integration Source" value="SampleWeaver/bin" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
