--- a/Integration/SampleTargetTests/SampleTargetTests.csproj
+++ b/Integration/SampleTargetTests/SampleTargetTests.csproj
@@ -2,18 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
-    <PackageReference Include="SampleWeaver.Fody" Version="$(IntegrationVersion)" />
+    <PackageReference Include="SampleWeaver.Fody" Version="1.0.0" />
+    <!-- Do NOT update these versions, it's for backward compatibility testing!!! -->
+    <PackageReference Include="JetBrainsAnnotations.Fody" Version="2.10.0" />
+    <PackageReference Include="NullGuard.Fody" Version="1.8.5" />
   </ItemGroup>
-  
+
 </Project>
