--- a/Integration/SampleWeaver/SampleWeaver.csproj
+++ b/Integration/SampleWeaver/SampleWeaver.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!-- This is just to test FodyPackaging, use local output path -->
-    <PackageOutputPath>$(ProjectDir)bin</PackageOutputPath>
+    <PackageOutputPath>$(SolutionDir)..\nugets</PackageOutputPath>
   </PropertyGroup>
 
   <Import Project="..\..\FodyPackaging\build\FodyPackaging.props" />
