Solution dir does not reliably end with a  trailing slash

--- a/SampleWeaver.Fody/SampleWeaver.Fody.csproj
+++ b/SampleWeaver.Fody/SampleWeaver.Fody.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
   </PropertyGroup>
 
-  <Import Project="$(SolutionDir)FodyHelpers\build\FodyHelpers.props" />
+  <Import Project="..\FodyHelpers\build\FodyHelpers.props" />
 
   <ItemGroup Condition="$(TargetFramework) == 'net46'">
     <Reference Include="Mono.Cecil" HintPath="..\Lib\Cecil\net40\Mono.Cecil.dll" />
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <Target Name="CopyForIntegration" AfterTargets="AfterBuild">
-    <Copy SourceFiles="$(TargetPath)" DestinationFiles="$(SolutionDir)Tests\Fody\Packages\SampleWeaver.Fody.1.0.0.0\SampleWeaver.Fody.dll" />
+    <Copy SourceFiles="$(TargetPath)" DestinationFiles="..\Tests\Fody\Packages\SampleWeaver.Fody.1.0.0.0\SampleWeaver.Fody.dll" />
   </Target>
 
-  <Import Project="$(SolutionDir)FodyHelpers\build\FodyHelpers.targets" />
+  <Import Project="..\FodyHelpers\build\FodyHelpers.targets" />
 
 </Project>
