--- a/RepoSync/RepoSync.csproj
+++ b/RepoSync/RepoSync.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitHubSync" Version="0.1.3" />
+    <PackageReference Include="GitHubSync" Version="0.2.0" />
+    <PackageReference Include="Octokit" Version="0.32.0" />
   </ItemGroup>
 
 </Project>
