--- a/Integration/WithDelaySigning/WithDelaySigning.csproj
+++ b/Integration/WithDelaySigning/WithDelaySigning.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
+    <WeaverFiles Include="$(SolutionDir)Weavers\bin\$(Configuration)\$(TargetFramework)\Weavers.dll" />
   </ItemGroup>
 </Project>
