--- a/FodyHelpers/FodyHelpers.csproj
+++ b/FodyHelpers/FodyHelpers.csproj
@@ -27,4 +27,8 @@
     <Content Include="build\*" PackagePath="build" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" />
+  </ItemGroup>
+
 </Project>
