Register the references cache file
This causes it to be deleted when the Clean target is called.

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -54,6 +54,10 @@
 
     </Fody.WeavingTask>
 
+    <ItemGroup>
+      <FileWrites Include="$(IntermediateOutputPath)$(FodyCopyLocalFilesCache)" />
+    </ItemGroup>
+
   </Target>
 
   <Target
