Add ProjectFileName to ModuleWeaverBase
fixes #655

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -40,6 +40,7 @@
         KeyOriginatorFile="$(KeyOriginatorFile)"
         AssemblyOriginatorKeyFile="$(AssemblyOriginatorKeyFile)"
         ProjectDirectory="$(MSBuildProjectDirectory)"
+        ProjectFile="$(MSBuildProjectFullPath)"
         SolutionDirectory="$(SolutionDir)"
         References="@(ReferencePath)"
         SignAssembly="$(SignAssembly)"
